@@ -1,11 +1,5 @@
 plugins {
-    id "java"
-    id "io.micronaut.application"
-    id "io.micronaut.build.internal.data-example"
-}
-
-repositories {
-    mavenCentral()
+    id "io.micronaut.build.internal.data-native-example"
 }
 
 application {
@@ -13,31 +7,21 @@ application {
 }
 
 micronaut {
-    version micronautVersion
+    version libs.versions.micronaut.platform.get()
     runtime "netty"
     testRuntime "junit5"
 }
 
 dependencies {
-    annotationProcessor project(":data-processor")
-    annotationProcessor "io.micronaut:micronaut-validation"
-    implementation project(":data-jdbc")
-    implementation "io.micronaut:micronaut-http-client"
-    implementation "io.micronaut:micronaut-validation"
-    implementation "io.micronaut.sql:micronaut-jdbc-tomcat"
-    implementation libs.jakarta.persistence.api
-    implementation libs.javax.transaction.api
-    runtimeOnly "ch.qos.logback:logback-classic"
-    runtimeOnly "com.h2database:h2"
-}
+    annotationProcessor projects.micronautDataProcessor
+    annotationProcessor mnValidation.micronaut.validation
 
-tasks.withType(JavaCompile){
-    if (JavaVersion.current() == JavaVersion.VERSION_15) {
-        targetCompatibility("15")
-        sourceCompatibility("15")
-        options.compilerArgs.add("--enable-preview")
-    } else {
-        targetCompatibility("16")
-        sourceCompatibility("16")
-    }
+    implementation projects.micronautDataJdbc
+    implementation mn.micronaut.http.client
+    implementation mnValidation.micronaut.validation
+    implementation libs.jakarta.persistence.api
+
+    runtimeOnly mnSql.micronaut.jdbc.tomcat
+    runtimeOnly mnLogging.logback.classic
+    runtimeOnly mnSql.h2
 }
